--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="decision_tree_fragment_title">decision tree fragment</string>
     <string name="quiz_fragment_title">quiz fragment</string>
     <string name="map_fragment_title">quiz fragment</string>
+    <string name="main_activity_title">Zrecykluj To!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
