app icon, quiz v2

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="main_activity_title">Zrecykluj To!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="button_start_text">Spustit</string>
+    <string name="button_submit_text">Potvrdit</string>
+    <string name="button_finish_text">Ukončit</string>
+    <string name="button_next_text">Další otázka</string>
 </resources>
